# AFT-LDSC

./: .gitignore  README.md  framework.txt  pyproject.toml  requirements.txt
examples/: 250.2.alpha  401.1.alpha  tutorial.py  tutorial.sh
examples/result/: 250.2_401.1_gcor_ldsc.results.tsv  250.2_enrichment_baselineLD.results.tsv  250.2_enrichment_baselineLD.summary.tsv  250.2_enrichment_baselineLD_celltype1.results.tsv  250.2_enrichment_baselineLD_celltype1.summary.tsv  250.2_enrichment_baselineLD_celltype1_results.csv  250.2_enrichment_baselineLD_results.csv  250.2_enrichment_baselinev12_celltype1.results.tsv  250.2_enrichment_baselinev12_celltype1.summary.tsv  250.2_enrichment_baselinev12_celltype1_results.csv  250.2_h2_baselineLD.results.tsv  250.2_h2_ldsc.results.tsv
src/aft_ldsc/: __init__.py  core.py  enrichment_task.py  gcor_task.py  heritability_task.py  io_utils.py  jackknife.py  qc.py  regression.py  sumstats_task.py
test_individual/: _compare.py  _compare_all.py  run_sumstats.sbatch
