[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aft-ldsc"
version = "0.1.0"
description = "Minimal AFT-LDSC package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
  "lifelines",
  "tqdm",
  "pysnptools",
]

[project.scripts]
aft-ldsc = "aft_ldsc.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
